--- a/themes/hexo-theme-matery/_config.yml
+++ b/themes/hexo-theme-matery/_config.yml
@@ -549,3 +549,11 @@ jsDelivr:
   url: # https://cdn.jsdelivr.net/gh/skyls03/skyls03.github.io
 
 
+############ 额外插件 ###########
+# 文章字数统计插件
+wordCount:
+  enable: true # 将这个值设置为 true 即可.
+  postWordCount: true
+  min2read: true
+  totalCount: true
+
